<resources>
    <string name="app_name">Умный Дом</string>
    <string name="button_main_page">Главная</string>
    <string name="button_user_profile">Профиль</string>
    <string name="button_settings">Настройки</string>
    <string name="tab_item_sign_in">Вход</string>
    <string name="tab_item_sign_up">Регистрация</string>
    <string name="input_user_email">Email пользователя</string>
    <string name="input_user_password">Пароль пользователя</string>
    <string name="button_forgot_password">Забыли пароль?</string>
    <string name="button_sign_in">Войти</string>
    <string name="button_sign_in_progress">Входим &#8230;</string>
    <string name="input_confirm_password">Подтвердите пароль</string>
    <string name="button_sign_up">Создать пользователя</string>
    <string name="button_sign_up_progress">Создание &#8230;</string>
    <string name="image_big_user_profile_description">Профиль пользователя</string>
    <string name="button_change_email_description">Изменить почту</string>
    <string name="button_change_password_description">Изменить пароль</string>
    <string name="button_update_user">Обновить пользователя</string>
    <string name="button_logout">Выйти</string>
    <string name="button_delete_user">Удалить</string>
    <string name="image_logo_description">Логотип приложения</string>
    <string name="text_add_device">Добавьте устройство</string>
    <string name="button_add_device">Добавить устройство</string>
    <string name="image_device_logo">Логотип устройства</string>
    <string name="text_wifi_thermometer">WiFi Термометр</string>
    <string name="text_heating_and_boiler">Котёл и Бойлер</string>
    <string name="text_smart_ir_remote">Умный ИК Пульт</string>
    <string name="text_smart_doorbell">Дверной Звонок</string>
    <string name="text_meter_reader">Показания Счётчика</string>
    <string name="text_smart_heater">Обогреватель</string>
    <string name="fab_back_description">Назад</string>
    <string name="fab_device_settings_description">Настройки устройства</string>
    <string name="humidity_text" translatable="false">%1d%%</string>
    <string name="button_show_notification">Показать</string>
    <string name="button_hide_notification">Скрыть</string>
    <string name="wifi_thermometer_graph_no_data_text">Показания термометра не получены!</string>
    <string name="temperature_legend_label">Температура</string>
    <string name="humidity_legend_label">Влажность</string>
    <string name="battery_level_text">Уровень заряда аккумулятора</string>
    <string name="button_heating">Котёл</string>
    <string name="button_boiler">Бойлер</string>
    <string name="tab_item_timer_mode">По таймеру</string>
    <string name="tab_item_time_mode">По времени</string>
    <string name="tab_item_temperature_mode">По температуре</string>
    <string name="text_heating_elements">1 тэн</string>
    <string name="button_start_timer">Запустить таймер</string>
    <string name="button_start_heating">Запустить котёл</string>
    <string name="button_stop_timer">Остановить таймер</string>
    <string name="button_stop_heating">Остановить котёл</string>
    <string name="heating_elements_text">%1d тэн</string>
    <string name="button_increase_description">Увеличить количество тэнов</string>
    <string name="button_decrease_description">Уменьшить количество тэнов</string>
    <string name="input_temperature">Температура в доме</string>
    <string name="min_max_temperature_text">Мин температура: %1d°C\nМакс температура: %2d°C</string>
    <string name="heating_started_text">Котёл запущен</string>
    <string name="heating_stopped_text">Котёл остановлен</string>
    <string name="temperature_text" translatable="false">%1d°C</string>
    <string name="timer_days_time_left_text" translatable="false">%1s:%2s:%3s:%4s</string>
    <string name="timer_time_left_text" translatable="false">%1s:%2s:%3s</string>
    <string name="text_colon" translatable="false">:</string>
    <string name="button_start_mode">Запустить режим</string>
    <string name="button_stop_mode">Остановить режим</string>
    <string name="button_add_time">Добавить</string>
    <string name="button_stop_boiler">Остановить бойлер</string>
    <string name="button_start_boiler">Запустить бойлер</string>
    <string name="text_light_remote">Пульт освещения</string>
    <string name="text_tv_remote">Пульт телевизора</string>
    <string name="text_rgb_remote">Пульт RGB ленты</string>
    <string name="text_ac_remote">Пульт кондиционера</string>
    <string name="off_text">Выкл</string>
    <string name="on_text">Вкл</string>
    <string name="button_on_off_light_description">Вкл/выкл освещение</string>
    <string name="button_rgb_on_off_description">Вкл/выкл RGB ленту</string>
    <string name="button_ac_on_off_description">Вкл/выкл кондиционер</string>
    <string name="button_tv_on_off_description">Вкл/выкл телевизор</string>
    <string name="button_night_mode_description">Ночной режим</string>
    <string name="button_decrease_color_temperature_description">Уменьшить температуру света</string>
    <string name="button_increase_color_temperature_description">Увеличить температуру света</string>
    <string name="button_increase_brightness_description">Увеличить яркость</string>
    <string name="button_decrease_brightness_description">Уменьшить яркость</string>
    <string name="button_max_brightness_description">Яркость 100%</string>
    <string name="button_timer_description">Таймер</string>
    <string name="button_half_brightness">Яркость 50%</string>
    <string name="button_color_temperature_mode_description">Температура света</string>
    <string name="button_source_description">Источник</string>
    <string name="button_up_description">Вверх</string>
    <string name="button_left_description">Влево</string>
    <string name="button_right_description">Вправо</string>
    <string name="button_down_description">Вниз</string>
    <string name="button_increase_volume_description">Увеличить громкость</string>
    <string name="button_decrease_volume_description">Уменьшить громкость</string>
    <string name="button_mute_description">Вкл/выкл звук</string>
    <string name="button_next_channel_description">Следующий канал</string>
    <string name="button_previous_channel_description">Предыдущий канал</string>
    <string name="button_decrease_temperature_description">Уменьшить температуру</string>
    <string name="button_increase_temperature_description">Увеличить температуру</string>
    <string name="cold_mode_text">Холод</string>
    <string name="dry_mode_text">Осушка</string>
    <string name="fan_mode_text">Обдув</string>
    <string name="heat_mode_text">Обогрев</string>
    <string name="auto_text">Авто</string>
    <string name="min_fan_speed_text">Мин</string>
    <string name="medium_fan_speed_text">Средняя</string>
    <string name="max_fan_speed_text">Макс</string>
    <string name="image_ac_mode_description">Режим кондиционера</string>
    <string name="button_fan_speed">Мощность</string>
    <string name="button_ac_mode">Режим</string>
    <string name="turbo_off_text">Турбо: выкл</string>
    <string name="light_off_text">Light: выкл</string>
    <string name="turbo_on_text">Турбо: вкл</string>
    <string name="light_on_text">Light: вкл</string>
    <string name="sleep_on_text">Сон: вкл</string>
    <string name="button_time_mode">Режим по времени</string>
    <string name="button_start_ac">Запустить кондиционер</string>
    <string name="button_stop_ac">Остановить кондиционер</string>
    <string name="button_rgb_on_description">Включить RGB ленту</string>
    <string name="button_rgb_off_description">Выключить RGB ленту</string>
    <string name="button_white">Белый</string>
    <string name="text_select_button">Выберите кнопку</string>
    <string name="button_save_remote">Сохранить пульт</string>
    <string name="click_any_button_text">Нажмите любую\nкнопку на вашем пульте</string>
    <string name="ac_remote_configured_text">Пульт управления кондиционером настроен</string>
    <string name="ac_remote_not_supported_text">Этот пульт не поддерживается</string>
    <string name="text_no_photos">Не получено\nни одного фото</string>
    <string name="fab_menu_description">Меню</string>
    <string name="button_delete_photo">Удалить фото</string>
    <string name="button_download_photo">Скачать фото</string>
    <string name="button_take_photo">Получить фото</string>
    <string name="text_select_photo">Выберите фото</string>
    <string name="input_photo_resolution">Разрешение фото</string>
    <string name="smart_doorbell_notification_text">Получен сигнал звонка!</string>
    <string name="text_meter_reading_change">Изменение: %1s</string>
    <string name="meter_readings_legend_label">Показания счётчика</string>
    <string name="text_no_meter_readings_received">Показания счётчика\nне были получены</string>
    <string name="button_start_heater">Запустить обогрев</string>
    <string name="button_stop_heater">Остановить обогрев</string>
    <string name="heater_started_text">Обогреватель запущен!</string>
    <string name="heater_stopped_text">Обогреватель остановлен!</string>
    <string name="preference_thermometer_interval_title">Интервал изменения графика</string>
    <string name="preference_thermometer_interval_summary">Если вы укажите, допустим, 5, на графике будет отображаться каждое 5-ое изменение показаний</string>
    <string name="preference_show_battery_level">Показывать уровень заряда аккумулятора в уведомлении</string>
    <string name="preference_max_heating_elements_title">Количество тэнов котла</string>
    <string name="preference_max_heating_elements_summary">Максимальное количество тэнов, которое может запустить ваш котёл</string>
    <string name="preference_min_temperature_title">Минимальная температура</string>
    <string name="preference_min_temperature_summary">Понижение минимальной температуры относительно установленной</string>
    <string name="preference_max_temperature_title">Максимальная температура</string>
    <string name="preference_max_temperature_summary">Повышение максимальной температуры относительно установленной</string>
    <string name="preference_over_current_protection_title">Защита от перегрузки сети</string>
    <string name="preference_over_current_protection_summary">Не даёт возможность одновременно запустить котёл на максимальную мощность и бойлер</string>
    <string name="preference_clear_graph_data">Очистить данные графика</string>
    <string name="preference_min_ac_temperature_title">Минимальная температура кондиционера</string>
    <string name="preference_max_ac_temperature_title">Максимальная температура кондиционера</string>
    <string name="preference_max_photos_title">Максимальное количество фото</string>
    <string name="preference_max_photos_summary">Максимальное количество фото, которое может храниться в Firebase</string>
    <string name="preference_select_photos_directory">Выбрать папку для фотографий</string>
    <string name="preference_delete_all_photos">Удалить все фотографии</string>
    <string name="preference_meter_digits_after_point_title">Количество цифр после запятой</string>
    <string name="preference_meter_digits_after_point_summary">Количество цифр вашего счётчика после запятой</string>
    <string name="preference_max_storage_time_title">Максимальное время хранения показаний счётчика в Firebase</string>
    <string name="preference_max_storage_time_summary">Через сколько дней удалять показания счётчика в Firebase</string>
    <string name="preference_heater_notifications_title">Уведомления о состоянии</string>
    <string name="preference_heater_notifications_summary">Уведомления о включении/выключении обогревателя в режиме по температуре</string>
    <string name="preference_haptic_feedback">Тип вибрации</string>
    <string name="preference_category_other_settings">Другие настройки</string>
    <string name="preference_default_settings">Настройки по умолчанию</string>
</resources>